[build-system]
requires = [
    "setuptools >= 58.0.4",
    "wheel >= 0.37.1",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
fix = true
lint.select = ["S", "I", "F"]
exclude = ["docs"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
files = "hydra_plugins"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=hydra_plugins",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:coverage.html",
    "--cov-report=xml:coverage.xml",
    "--junitxml=junit.xml",
    "--doctest-modules"
]
testpaths = [
    "tests/unit",
    "tests/integration",
]
