[metadata]
name = hydra_ray_job_launcher
version = 0.0.1
description = A launcher plugin to execute Hydra jobs on Ray.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
maintainers =
    Jonathan Carter

[options]
zip_safe = False
packages = find_namespace:
platforms = any
include_package_data = True
python_requires = >=3.9
# This list is duplicated in requirements.txt for Docker images to be able to install less-frequently changing dependencies in a separate layer
install_requires =
    cloudpickle>=2.2.0
    ray[default]>=2.6.0
    hydra_core>=1.3.0
    omegaconf>=2.2
